service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-from-github
  labels:
    app: nginx-from-github
    app.kubernetes.io/part-of: nginx-from-github
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
