route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-from-github
  labels:
    app: nginx-from-github
    app.kubernetes.io/part-of: nginx-from-github
spec:
  to:
    kind: Service
    name: nginx-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
